# MediaRef

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  context7.json  pyproject.toml  test_media.py  test_screen_msg.py
.github/actions/setup-uv/: action.yml
.github/assets/: plot_decoding_benchmark.py
.github/workflows/: ci.yml  publish.yml  test.yml
docs/: API.md  COMPARISONS.md  SPEC.md  playback_semantics.md  torchcodec_design.md
examples/: demo.py
examples/ros/: README.md  bag_info.py  bag_to_mediaref.py  convert_to_mediaref.py  mediaref_decode.py  read_mediaref_bag.py  requirements.txt  show_bag.py  show_mcap.py  show_ros1_bag.py  show_ros2_bag.py
scripts/: plot_decoding_benchmark.py
scripts/patch_torchcodec/: README.md  pyproject.toml
scripts/patch_torchcodec/src/patch_torchcodec/: __init__.py  __main__.py  core.py
src/mediaref/: __init__.py  _cli.py  _features.py  _internal.py  _typing.py  batch.py  core.py  data_uri.py  hf.py  loader.py  resource_cache.py
src/mediaref/cached_av/: __init__.py
src/mediaref/compat/: __init__.py  lerobot.py  mcap.py
src/mediaref/video/: reader.py  writer.py
src/mediaref/video_decoder/: __init__.py  base.py  frame_batch.py  pyav_decoder.py  torchcodec_decoder.py  types.py
tests/: __init__.py  conftest.py  smoke.py  smoke_test.py  test_batch_decode.py  test_cli.py  test_compat_lerobot.py  test_compat_mcap.py  test_core_only.py  test_data_uri.py  test_fsspec.py  test_hf.py  test_imports.py  test_integration.py  test_internal.py  test_loading.py  test_mediaref.py  test_path_resolution.py  test_properties.py  test_pyav_decoder.py  test_resource_cache.py  test_serialization.py  test_workflows.py
tests/video_decoder/: conftest.py  test_decoder_consistency.py  test_pyav_decoder.py  test_torchcodec_decoder.py
