[project]
name = "mediaref"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Suhwan Choi", email = "milkclouds00@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",   # Data validation and serialization
    "numpy",           # Array operations (core functionality)
    "pillow",          # Image loading and processing
    "opencv-python",   # Image processing (cv2.cvtColor, etc.)
    "requests",        # Remote image/video loading
    "loguru",          # Logging
]

[project.optional-dependencies]
video = [
    "av>=15.0",        # Video frame extraction (PyAV)
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ipython",
]

[tool.ruff]
line-length = 119

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/mediaref/_version.py"
