[project]
name = "mediaref"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Suhwan Choi", email = "milkclouds00@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",   # Data validation and serialization
    "numpy",           # Array operations (core functionality)
    "pillow",          # Image loading and processing
    "opencv-python",   # Image processing (cv2.cvtColor, etc.)
    "requests",        # Remote image/video loading
    "loguru",          # Logging
]

[project.optional-dependencies]
video = [
    "av>=15.0",        # Video frame extraction (PyAV)
]

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.2",
]

[tool.ruff]
line-length = 119

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/mediaref/_version.py"
