[project]
name = "mediaref"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Suhwan Choi", email = "milkclouds00@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",   # Pydantic v2 has breaking changes
    "numpy", 
    "Pillow>=9.4.0",   # When PIL.Image.ExifTags was introduced
    "opencv-python",
    "requests>=2.32.2",
    "loguru",
]

[project.optional-dependencies]
video = [
    "av>=15.0",
]

[dependency-groups]
dev = [
    "ipython",
    "pytest",
    "pytest-cov",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 119

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/mediaref/_version.py"
